--- a/TravelOrganizationSystem/WebApp/Pages/Shared/_Layout.cshtml
+++ b/TravelOrganizationSystem/WebApp/Pages/Shared/_Layout.cshtml
@@ -73,21 +73,16 @@
                                     <span>Admin</span>
                                 </a>
                                 <ul class="dropdown-menu modern-dropdown" aria-labelledby="adminDropdown">
-                                    <li><a class="dropdown-item modern-dropdown-item" asp-area="" asp-page="/Admin/Destinations/Index">
+                                    <li><a class="dropdown-item modern-dropdown-item" asp-area="" asp-page="/Destinations/Index">
                                         <i class="fas fa-map me-2"></i>Manage Destinations</a></li>
-                                    <li><a class="dropdown-item modern-dropdown-item" asp-area="" asp-page="/Admin/Trips/Index">
+                                    <li><a class="dropdown-item modern-dropdown-item" asp-area="" asp-page="/Trips/Index">
                                         <i class="fas fa-route me-2"></i>Manage Trips</a></li>
                                     <li><a class="dropdown-item modern-dropdown-item" asp-area="" asp-page="/Admin/Guides/Index">
                                         <i class="fas fa-user-tie me-2"></i>Manage Guides</a></li>
                                     <li><a class="dropdown-item modern-dropdown-item" asp-area="" asp-page="/Admin/GuideAssignments/Index">
                                         <i class="fas fa-user-plus me-2"></i>Guide Assignments</a></li>
-                                    <li><a class="dropdown-item modern-dropdown-item" asp-area="" asp-page="/Admin/Bookings/Index">
-                                        <i class="fas fa-list-alt me-2"></i>Manage Bookings</a></li>
-                                    <li><a class="dropdown-item modern-dropdown-item" asp-area="" asp-page="/Admin/Users/Index">
-                                        <i class="fas fa-users me-2"></i>Manage Users</a></li>
-                                    <li><hr class="dropdown-divider modern-divider"></li>
-                                    <li><a class="dropdown-item modern-dropdown-item" asp-area="" asp-page="/Admin/Logs/Index">
-                                        <i class="fas fa-file-alt me-2"></i>System Logs</a></li>
+                                    <li><a class="dropdown-item modern-dropdown-item" asp-area="" asp-page="/Trips/MyBookings">
+                                        <i class="fas fa-list-alt me-2"></i>Bookings Overview</a></li>
                                 </ul>
                             </li>
                         }
