chore: Added all the files that where generated for the deployment

--- a/TravelOrganizationSystem/WebApp/Pages/Shared/_Layout.cshtml
+++ b/TravelOrganizationSystem/WebApp/Pages/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Travel Organization System</title>
+    <title>@ViewData["Title"] - Travel System</title>
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -157,7 +157,7 @@
                     <div class="col-md-8">
                         <div class="footer-copyright">
                             <i class="fas fa-copyright me-1"></i>
-                            2025 RWA - Travel Organization System. 
+                            Travel Organization System. 
                             <span class="text-accent">Developed by Matija Sokol</span>
                         </div>
                     </div>
