fix: cdci frontend tested

--- a/TravelOrganizationSystem/WebApp/Pages/Account/Login.cshtml
+++ b/TravelOrganizationSystem/WebApp/Pages/Account/Login.cshtml
@@ -52,7 +52,7 @@
             </div>
             
             <div class="mt-3 text-center">
-                <a href="#" class="text-primary forgot-password">Forgot your password???</a>
+                <a href="#" class="text-primary forgot-password">Forgot your password?</a>
             </div>
         </div>
         
