--- a/TravelOrganizationSystem/WebApp/Pages/_ViewImports.cshtml
+++ b/TravelOrganizationSystem/WebApp/Pages/_ViewImports.cshtml
@@ -1,4 +1,6 @@
 ﻿@using WebApp
+@using WebApp.Extensions
+@using WebApp.Services
 @using Microsoft.Extensions.Hosting
 @namespace WebApp.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
